@@ -10,6 +10,7 @@
 listdefault: list default rmodifiers
         add: add a rmodifier
        name: name of rmodifier
+             note: the name can not start with "#"
   modifiers: comma separated list of modifiers
      groups: action on groups found: comma separated list of groups (from 1 to 9) with optional "*" after number to hide group
       regex: regular expression (case insensitive, can start by "(?-i)" to become case sensitive)
